# cppcourse-brunel

./: Brunel_plota.py  Brunel_plotb.py  Brunel_plotc.py  Brunel_plotd.py  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  experiment.cpp  experiment.h  main_neuron.cpp  network.cpp  network.h  neuron.cpp  neuron.h  test.cpp
buils/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  neuron  neuron_unittest
buils/gtest/: CTestTestfile.cmake  Makefile
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
neuron/: CMakeLists.txt  main_neuron.cpp  neuron.cpp
python/: graph.py
